@@ -1,4 +1,6 @@
 20101105
+ - (djm) [loginrec.c loginrec.h] Use correct uid_t/pid_t types instead of
+   int. Should fix bz#1817 cleanly; ok dtucker@
  - OpenBSD CVS Sync
    - djm@cvs.openbsd.org 2010/09/22 12:26:05
      [regress/Makefile regress/kextype.sh]
